--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -7,7 +7,7 @@
     <title>Task Manager</title>
 </head>
 <body>
-    {% for task in tasks%}
+    {% for task in all_tasks%}
         {{task.task_name}}<br>
         {{task.catagory_name}}<br>
         {{task.task_description}}<br>
