--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,37 @@
     {% endblock %}
     <title>Task Manager</title>
 </head>
+
+<header>
+    <nav class="nav-extended text-shadow light-blue darken-3">
+        <div class="nav-wrapper">
+          <a href="#!" class="brand-logo">Task Manager</a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">New Task</a></li>
+            <li><a href="#">Manage Catagories</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Register</a></li>
+            
+          </ul>
+        </div>
+      </nav>
+    
+      <ul class="sidenav" id="mobile-demo">
+          <li><h4 class="center-align light-blue-text text-darken-4"></h4></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">New Task</a></li>
+            <li><a href="#">Manage Catagories</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Register</a></li>
+      </ul>
+</header>
+
 <body>
     <h4>I'm a block element</h4>
     {% block content%}
