--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Register</h3>
+<h3 class="center-align">Login</h3>
 
 <div class="row">
-    <form class="col s12 m8 offset-m2" method="POST" action="{{url_for('register')}}>
+    <form class="col s12 m8 offset-m2" method="POST" action="{{url_for('login')}}>
       <div class="card-panel ">
         <!--Username-->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-user-plus prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-user-cog prefix light-blue-text text-darken-4"></i>
                 <input id="username" name="username" type="text" class="validate">
                 <label for="username">Username</label>
             </div>
@@ -25,7 +25,7 @@
          <!--Register-->
         <div class="row">
             <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
-                Register <i class="fas fa-sign-in-alt"></i>
+                Login <i class="fas fa-sign-in-alt"></i>
             </button>
         </div>
      </div>
@@ -34,7 +34,7 @@
 
   <div class="row s12">
     <p class="center-align">
-      Already registed? <a href="{{url_for('login')}}" class="light-blue-text text-darken-4">Logn In</a>
+      New Here? <a href="{{url_for('register')}}" class="light-blue-text text-darken-4">Register Account</a>
     </p>
   </div>
 
