--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+    
 	<header>
         <!-- top navbar -->
 		<nav class="nav-extended text-shadow light-blue darken-1">
@@ -21,7 +22,7 @@
 				<a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-					<li><a href="#">Profile</a></li>
+					<li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
 					<li><a href="#">New Task</a></li>
 					<li><a href="#">Manage Categories</a></li>
 					<li><a href="#">Log Out</a></li>
@@ -35,7 +36,7 @@
 		<ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-blue-text text-darken 4">Task Manager</h4></li>
             <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
             <li><a href="#">New Task</a></li>
             <li><a href="#">Manage Categories</a></li>
             <li><a href="#">Log Out</a></li>
@@ -44,8 +45,22 @@
 		</ul>
 	</header>
 
+    <section>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="row flashes">
+                        <h4 class="light-blue lighten-4 center-align">{{ message }}</h4> 
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </section>
+
+    <main class="containter">
     {% block content %}
     {% endblock %}
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
