binding the data to the accordion

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -3,20 +3,16 @@
 
     <h2>I'm extending the base template</h2>
 
-    <!-- {% for task in tasks%}
-        {{task.task_name}}<br>
-        {{task.catagory_name}}<br>
-        {{task.task_description}}<br>
-        {{task.is_urgent}}<br>
-        {{task.due_date}}<br>
-    {% endfor %} -->
 
     <ul class="collapsible">
         {% for task in tasks %}
         <li>
-          <div class="collapsible-header">
+            <div class="collapsible-header">
               <i class="fas fa-caret-down"></i>
               <strong>{{ task.task_name }}</strong> : {{task.due_date}}
+              {% if task.is_urgent == "on" %} 
+                <i class="fas fa-exclamation-circle light-blue-text text-lighten-2"></i>
+              {% endif %}
             </div>
             <div class="collapsible-body white-text light-blue darken-4 text-shadow">
                 <strong>{{task.catagory_name}}</strong>
