--- a/templates/add_tasks.html
+++ b/templates/add_tasks.html
@@ -1,23 +1,46 @@
-{% extends "base.html" %} 
-{% block content %} 
+{% extends "base.html" %}
+{% block content %}
 
-    <h3 class="light-blue-text text-darken-4 center-align">New Tasks</h3>
+<h3 class="light-blue-text text-darken-4 center-align">New Tasks</h3>
 
-    <div class="row">
-        <form class="col s12" method="POST" action="">
-          <div class="row">
-            <div class="input-field col s6">
-              <i class="fas fa-user-circle prefix light-blue-text text-darken-4"></i>
-              <input id="icon_prefix" type="text" class="validate">
-              <label for="icon_prefix">First Name</label>
+<div class="row card-panel grey lighten-5">
+    <form class="col s12" method="POST" action="">
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
+                <input id="task_name" minlengh="5" maxlengh="50" name="task_name" type="text" class="validate" required>
+                <label for="task_name">Task Name</label>
             </div>
-            <div class="input-field col s6">
-                <i class="fas fa-phone prefix light-blue-text text-darken-4"></i>
-              <input id="icon_telephone" type="tel" class="validate">
-              <label for="icon_telephone">Telephone</label>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
+                <textarea id="task_description" name="task_description" minlengh="5" maxlengh="200"
+                    class="materialize-textarea" required></textarea>
+                <label for="task_description">Task Description</label>
             </div>
-          </div>
-        </form>
-      </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-calender-alt prefix light-blue-text text-darken-4"></i>
+                <input id="due_date" name="due_date" type="text" class="datepicker validate" required>
+                <label for="due_date">Due Date</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <div class="switch">
+                    <i class="fas fa-exclamation-circle prefix light-blue-text text-darken-4"></i>
+                    <label for="is_uegent">
+                        <input type="checkbox" id="is_uegent" name="is_uegent">
+                        <span class="lever"></span>
+                        Is Urgent
+                    </label>
+                </div>
+            </div>
+        </div>
+</div>
+</form>
+</div>
 
 {% endblock %}
