--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,21 +1,27 @@
     {% extends "base.html" %}
     {% block content %}
 
-    <h2>I'm extending the base template</h2>
-
+  <h3 class="light-blue-text text-darken-4 center-align">All Tasks</h3>
 
     <ul class="collapsible">
         {% for task in tasks %}
         <li>
             <div class="collapsible-header">
-              <i class="fas fa-caret-down"></i>
-              <strong>{{ task.task_name }}</strong> : {{task.due_date}}
-              {% if task.is_urgent == "on" %} 
-                <i class="fas fa-exclamation-circle light-blue-text text-lighten-2"></i>
-              {% endif %}
+              <div class="col s3">
+                  <i class="fas fa-caret-down"></i>
+                  <a href="" class="btn-small green accent-4">Done</a>
+                  <a href="" class="btn-small light-blue accent-4">Edit</a>
+              </div>
+              <div class="col s9">
+                  <strong>{{ task.task_name }}</strong> : {{task.due_date}}
+                  {% if task.is_urgent == "on" %} 
+                    <i class="fas fa-exclamation-circle light-blue-text text-lighten-2"></i>
+                  {% endif %}
+              </div>
             </div>
             <div class="collapsible-body white-text light-blue darken-4 text-shadow">
                 <strong>{{task.catagory_name}}</strong>
+                <p><em>by: {{ task.created_by }}</em></p>
                 <p>{{task.task_description}}</p>
             </div>
         </li>
